--- a/admin/scss/_ModelAdmin.scss
+++ b/admin/scss/_ModelAdmin.scss
@@ -1,13 +1,19 @@
-.ModelAdmin .cms-content-fields .cms-content-tools .cms-panel-content {
-	.cms-search-form {
-		.resetformaction {
-			margin-right:0px;
-			span {
-				padding-left:0px;
+.ModelAdmin .cms-content-fields {
+	overflow:hidden; //removes scrolling from filter panel
+	.cms-edit-form {
+		overflow-y:auto; //adds scrolling only to the datagrid 
+	}
+	.cms-content-tools .cms-panel-content {
+		.cms-search-form {
+			.resetformaction {
+				margin-right:0px;
+				span {
+					padding-left:0px;
+				}
 			}
 		}
-	}
-	#Form_ImportForm {
-		overflow:hidden;
-	}
+		#Form_ImportForm {
+			overflow:hidden;
+		}
+	}	
 }
