--- a/admin/scss/_SecurityAdmin.scss
+++ b/admin/scss/_SecurityAdmin.scss
@@ -13,3 +13,13 @@
 		}
 	}
 }
+
+.cms .cms-content .SecurityAdmin { //datagrid overflow on Security Admin	
+	.cms-content-fields {
+		overflow-y:auto;
+		.aligned-right-label { //align the label with the parent group field in add new group
+			margin-left:$grid-x*23;
+			padding:$grid-x 0;
+		}
+	}
+}
